Fetch mod files with HttpClient